--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.root=INFO
 logging.level.org.zalando.logbook= TRACE
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:tcp://localhost:9092/./db/filmorate
+spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
